<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/show_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="Category: Unknown"
        android:textColor="#DA1111"
        android:textSize="8sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/limit_card"
        app:layout_constraintTop_toTopOf="@+id/prod_guess" />

    <TextView
        android:id="@+id/prod_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Our Guess: "
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/show_cat"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/limit_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/app_select_button"
        app:layout_constraintStart_toStartOf="@+id/app_select_button"
        app:layout_constraintTop_toBottomOf="@+id/prod_guess">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/weekly_limit"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="hh:mm"
                android:inputType="time"
                app:layout_constraintStart_toEndOf="@+id/weekly_limit_text"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/daily_limit"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="hh:mm"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/weekly_limit"
                app:layout_constraintStart_toStartOf="@+id/weekly_limit"
                app:layout_constraintTop_toBottomOf="@+id/weekly_limit" />

            <TextView
                android:id="@+id/weekly_limit_text"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="12dp"
                android:text="Weekly limit:"
                app:layout_constraintBottom_toBottomOf="@+id/weekly_limit"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/daily_limit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Daily limit: "
                app:layout_constraintBottom_toBottomOf="@+id/daily_limit"
                app:layout_constraintEnd_toEndOf="@+id/weekly_limit_text"
                app:layout_constraintStart_toStartOf="@+id/weekly_limit_text" />

            <Button
                android:id="@+id/save_select_button"
                android:layout_width="70dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/daily_limit" />

            <Switch
                android:id="@+id/set_as_productive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Always Allowed"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/save_select_button"
                app:layout_constraintEnd_toEndOf="@+id/save_select_button" />

            <Button
                android:id="@+id/reset_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset Limits"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/set_as_productive"
                app:layout_constraintStart_toStartOf="@+id/set_as_productive" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/app_select_button"
        android:layout_width="414dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prod_guess"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>